modified:   package.json 	modified:   src/App.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DeeBabaTech.github.io/LiteVilleEngineering",
+  "homepage": "https://DeeBabaTech.github.io/",
   "name": "liteville",
   "version": "0.1.0",
   "private": true,
