modified:   package.json
Changes not staged for commit:
	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DeeBabaTech.github.io/",
+  "homepage": "https://deebabaTech.github.io/",
   "name": "liteville",
   "version": "0.1.0",
   "private": true,
