--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://deebabatech.github.io/LitevilleEngineering",
   "name": "liteville",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
