modified:   package.json 	modified:   src/App.js/ 	modified:   src/components/Header.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://deebabatech.github.io/LitevilleEngineering",
+  "homepage": "https://deebabatech.github.io/LiteVilleEngineering",
   "name": "liteville",
   "version": "0.1.0",
   "private": true,
